# rusticodb

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: client.rs  column.rs  command_line.rs  config.rs  connection.rs  database.rs  execute.rs  foreign_key.rs  index.rs  lib.rs  main.rs  parser.rs  server.rs  setup.rs  sys_db.rs  table.rs
src/config/: auth_db.rs  mod.rs  sys_db.rs
src/execute/: create_table.rs  mod.rs
src/file_engine/: create_table.rs  helpers.rs  mod.rs
src/machine/: attribution.rs  check_database_exists.rs  check_index_exists.rs  check_sequence_exists.rs  check_table_exists.rs  check_view_exists.rs  column.rs  condition.rs  context.rs  create_columns.rs  create_database.rs  create_file.rs  create_index.rs  create_sequence.rs  create_table.rs  create_view.rs  database.rs  database_exists.rs  drop_columns.rs  drop_database.rs  drop_database_ref.rs  drop_index.rs  drop_sequence.rs  drop_table.rs  drop_table_ref.rs  drop_tuples.rs  expression.rs  filter.rs  get_columns.rs  get_indexes.rs  get_sequence_next_id.rs  get_sequences.rs  get_tables.rs  index.rs  insert_full_row.rs  insert_row.rs  insert_tuples.rs  machine.rs  mod.rs  pager_manager.rs  (+9 more)
src/parser/: create_database.rs  create_index.rs  create_sequence.rs  create_table.rs  create_view.rs  delete.rs  drop_database.rs  drop_index.rs  drop_sequence.rs  drop_table.rs  insert.rs  mod.rs  parse_command.rs  parse_query.rs  process_command.rs  query.rs  result_set.rs  show_databases.rs  show_tables.rs  sql_executor.rs  update.rs  use_database.rs
src/setup/: load_auth_base.rs  load_base.rs  load_base_tables.rs  load_columns.rs  load_databases.rs  load_indexes.rs  load_sequences.rs  load_tables.rs  mod.rs
tests/: create_table_test.rs  insert_row_test.rs  mod.rs  parser_test.rs
(+78 files in other folders)
