[package]
name = "rusticodb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rusticodbshell"
path = "src/main.rs"

[lib]
name = "rusticodb"
path = "src/lib.rs"

[dependencies]
sqlparser = "0.49.0" 
failure = "0.1"
lazy_static = "1.5.0"
ordered-float = { version = "3", features = ["serde"] }
bincode = "1.3"

[dependencies.serde]
version = "1.0.197"
features = [ 'derive']
