[package]
name = "rusticodb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rusticodbshell"
path = "src/main.rs"

[[bin]]
name = "rusticodbserver"
path = "src/server.rs"

[[bin]]
name = "rusticodbclient"
path = "src/client.rs"

[lib]
name = "rusticodb"
path = "src/lib.rs"

[dependencies]
sqlparser = { git = "https://github.com/apache/datafusion-sqlparser-rs.git", branch="main" }
failure = "0.1"
lazy_static = "1.5.0"
ordered-float = { version = "3", features = ["serde"] }
bincode = "1.3"
tokio = { version = "1.43.0", features = ["full"] }


[dependencies.serde]
version = "1.0.197"
features = [ 'derive']
