[package]
name = "rusticodb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shell"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[lib]
name = "rusticodb"
path = "src/lib.rs"

[dev-dependencies]
rstest = "0.18"

[dependencies]
sqlparser = { git = "https://github.com/apache/datafusion-sqlparser-rs.git", branch="main" }
failure = "0.1"
lazy_static = "1.5.0"
ordered-float = { version = "3", features = ["serde"] }
bincode = "1.3"
tokio = { version = "1.43.0", features = ["full"] }
rustyline = "15.0.0"

[dependencies.serde]
version = "1.0.197"
features = ['derive']
